<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:text="@string/game_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/side_margin_small"
        android:gravity="center"
        android:textSize="14pt"
        android:textStyle="italic"
        android:id="@+id/textView"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/textView2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/textView3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin_medium"
        android:orientation="horizontal">

        <Button
            android:text="@string/game_button_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/side_margin_small"
            android:layout_marginRight="@dimen/side_margin_small"
            android:onClick="StateOrCapital"
            android:id="@+id/button3"/>

        <Button
            android:text="@string/game_button_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/side_margin_small"
            android:layout_marginRight="@dimen/side_margin_small"
            android:onClick="StateOrCapital"
            android:id="@+id/button4"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/side_margin_small"
        android:gravity="center"
        android:id="@+id/textView4"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/side_margin_small"
        android:gravity="center"
        android:id="@+id/textView5"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/side_margin_medium"
        android:layout_marginRight="@dimen/side_margin_medium"
        android:gravity="center"
        android:inputType="textPersonName"
        android:hint="@string/hint"
        android:textAlignment="center"
        android:visibility="invisible"
        android:ems="10"
        android:id="@+id/editText2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/textView6"/>

    <Button
        android:text="@string/game_button_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="@dimen/side_margin_large"
        android:layout_marginRight="@dimen/side_margin_large"
        android:onClick="StateOrCapital"
        android:visibility="invisible"
        android:id="@+id/button5"/>

    <TextView
        android:text="@string/game_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/textView7"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/textView8"/>

    <Button
        android:text="@string/game_button_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin_small"
        android:layout_gravity="center"
        android:onClick="StateOrCapital"
        android:id="@+id/button6"/>
</LinearLayout>